--- a/test.html
+++ b/test.html
@@ -62,13 +62,13 @@
     </div>
 
     <div class="container">
-        <a href="https://dakotacounty.maps.arcgis.com"><img src="images\icons\generic-map.svg"></a>
-        <a href="https://www.co.dakota.mn.us/"><img src="images\icons\generic-website.svg"></a>
-        <a href="https://www.github.com/DCJoeS"><img src="images\icons\github.svg"></a>
-        <a href="https://www.instagram.com/jsapletal"><img src="images\icons\instagram.svg"></a>
-        <a href="https://www.linkedin.com/in/joesapletal/"><img src="images\icons\linkedin.svg"></a>
-        <a href="https://www.openstreetmap.org/user/DCJoeS"><img src="images\icons\linkedin.svg"></a>
-        <a href="https://www.x.com/DCGISJoe"><img src="images\icons\x.svg"></a>
+        <a href="https://dakotacounty.maps.arcgis.com" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\generic-map.svg"></a>
+        <a href="https://www.co.dakota.mn.us/" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\generic-website.svg"></a>
+        <a href="https://www.github.com/DCJoeS" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\github.svg"></a>
+        <a href="https://www.instagram.com/jsapletal" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\instagram.svg"></a>
+        <a href="https://www.linkedin.com/in/joesapletal/" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\linkedin.svg"></a>
+        <a href="https://www.openstreetmap.org/user/DCJoeS" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\linkedin.svg"></a>
+        <a href="https://www.x.com/DCGISJoe" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\x.svg"></a>
     </div>
 
     
