lst of the night

--- a/test.html
+++ b/test.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="container">
-        <a href="https://dakotacounty.maps.arcgis.com" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\generic-map.svg"></a>
+        <a href="https://dakotacounty.maps.arcgis.com" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\generic-map.svg" alt="Dakota County ArcGIS Online"></a>
         <a href="https://www.co.dakota.mn.us/" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\generic-website.svg"></a>
         <a href="https://www.github.com/DCJoeS" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\github.svg"></a>
         <a href="https://www.instagram.com/jsapletal" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\instagram.svg"></a>
@@ -71,12 +71,19 @@
         <a href="https://www.x.com/DCGISJoe" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\x.svg"></a>
     </div>
 
-    
+    <div class="container-fluid mt-3">
+        <div class="row"style="margin-top: 8px;">
+          <div class="col"></div>
+          <div class="col"></div>
+          <div class="col"></div>
+        </div>
+        <h2 style="margin-top: 8px;">GIS Manager</h2>
+        <h2>Dakota County Information Department</h2>
+        <h2>Office of GIS</h2>
+  </div>   
     
 
-  <h2 style="margin-top: 8px;">GIS Manager</h2>
-  <h2>Dakota County Information Department</h2>
-  <h2>Office of GIS</h2>
+
 
 
 
