bacground for new test

--- a/newtest.html
+++ b/newtest.html
@@ -8,6 +8,10 @@
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
     <title>Image Gallery</title>
     <style>
+
+body {
+    background: rgb(31,26,53);
+  }
 /* styles.css */
 .image-row {
     display: flex;
