--- a/newtest.html
+++ b/newtest.html
@@ -15,7 +15,7 @@ body {
 /* styles.css */
 .image-row {
     display: flex;
-    justify-content: space-center; /* Distribute space evenly */
+    justify-content: center;
     align-items: center; /* Vertically center images */
     gap: 4px; /* Adjust spacing between images */
 }
