--- a/newtest.html
+++ b/newtest.html
@@ -31,6 +31,8 @@ body {
 <body>
     <div class="image-row">
         <!-- Add your images here -->
+        <a href="https://dakotacounty.maps.arcgis.com" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\generic-map.svg" alt="Dakota County ArcGIS Online"></a>
+        <a href="https://www.co.dakota.mn.us/" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\generic-website.svg"></a>
         <img src="images\icons\generic-map.svg" alt="Image 1">
         <img src="images\icons\generic-website.svg" alt="Image 2">
         <!-- ... Repeat for other images ... -->
