--- a/newtest.html
+++ b/newtest.html
@@ -33,8 +33,11 @@ body {
         <!-- Add your images here -->
         <a href="https://dakotacounty.maps.arcgis.com" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\generic-map.svg" alt="Dakota County ArcGIS Online"></a>
         <a href="https://www.co.dakota.mn.us/" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\generic-website.svg"></a>
-        <img src="images\icons\generic-map.svg" alt="Image 1">
-        <img src="images\icons\generic-website.svg" alt="Image 2">
+        <a href="https://www.github.com/DCJoeS" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\github.svg"></a>
+        <a href="https://www.instagram.com/jsapletal" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\instagram.svg"></a>
+        <a href="https://www.linkedin.com/in/joesapletal/" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\linkedin.svg"></a>
+        <a href="https://www.openstreetmap.org/user/DCJoeS" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\linkedin.svg"></a>
+        <a href="https://www.x.com/DCGISJoe" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\x.svg"></a>
         <!-- ... Repeat for other images ... -->
     </div>
 </body>
