--- a/newtest.html
+++ b/newtest.html
@@ -6,11 +6,25 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Include Bootstrap CSS if needed -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
-    <title>Image Gallery</title>
+    <title>Joe Sapletal, GISP</title>
     <style>
 
 body {
     background: rgb(31,26,53);
+  }
+  h1 {
+    color:white;
+    text-align: center;
+    font-family: Arial;
+    font-weight: bold;
+    font-size: 18px;
+    }
+  h2 {
+    color:white;
+    text-align: center;
+    font-family: Arial;
+    font-weight: noraml;
+    font-size: 13px;
   }
 /* styles.css */
 .image-row {
@@ -29,6 +43,16 @@ body {
     </style>
     </head>
 <body>
+    <div class="container-fluid mt-3">
+        <div class="row"style="margin-top: 8px;">
+          <div class="col"></div>
+          <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"></div>
+          <div class="col"></div>
+        </div>
+        <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
+        <h2>joe.sapletal@co.dakota.mn.us</h2>
+    </div>
+
     <div class="image-row">
         <!-- Add your images here -->
         <a href="https://dakotacounty.maps.arcgis.com" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\generic-map.svg" alt="Dakota County ArcGIS Online"></a>
