container style add

--- a/newtest.html
+++ b/newtest.html
@@ -41,7 +41,10 @@ body {
     max-width: 100%; /* Ensure images don't exceed container width */
     height: auto; /* Maintain aspect ratio */
 }
-
+.container {
+  align-items: center; 
+  float: center;
+}
 
     </style>
     </head>
