--- a/newtest.html
+++ b/newtest.html
@@ -41,10 +41,7 @@ body {
     max-width: 100%; /* Ensure images don't exceed container width */
     height: auto; /* Maintain aspect ratio */
 }
-.container {
-  align-items: center; 
-  float: center;
-}
+
 
     </style>
     </head>
@@ -52,7 +49,7 @@ body {
     <div class="container-fluid mt-3">
         <div class="row"style="margin-top: 8px;">
           <div class="col"></div>
-          <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"></div>
+          <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" align="middle"></div>
           <div class="col"></div>
         </div>
         <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
