--- a/newtest.html
+++ b/newtest.html
@@ -29,6 +29,7 @@ body {
     font-weight: noraml;
     font-size: 13px;
   }
+
 /* styles.css */
 .image-row {
     display: flex;
@@ -49,7 +50,7 @@ body {
     <div class="container-fluid mt-3">
         <div class="row"style="margin-top: 8px;">
           <div class="col"></div>
-          <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" align="middle"></div>
+          <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" class="center"></div>
           <div class="col"></div>
         </div>
         <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
