--- a/newtest.html
+++ b/newtest.html
@@ -42,7 +42,12 @@ body {
     max-width: 100%; /* Ensure images don't exceed container width */
     height: auto; /* Maintain aspect ratio */
 }
-
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
     </style>
     </head>
