--- a/newtest.html
+++ b/newtest.html
@@ -42,11 +42,10 @@ body {
     max-width: 100%; /* Ensure images don't exceed container width */
     height: auto; /* Maintain aspect ratio */
 }
-.center {
+.img-center {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
 }
 
     </style>
@@ -55,7 +54,7 @@ body {
     <div class="container-fluid mt-3">
         <div class="row"style="margin-top: 8px;">
           <div class="col"></div>
-          <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" class="center"></div>
+          <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" class="img-center"></div>
           <div class="col"></div>
         </div>
         <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
