--- a/newtest.html
+++ b/newtest.html
@@ -42,7 +42,7 @@ body {
     max-width: 100%; /* Ensure images don't exceed container width */
     height: auto; /* Maintain aspect ratio */
 }
-.img-center {
+.img-center img {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -54,7 +54,9 @@ body {
     <div class="container-fluid mt-3">
         <div class="row"style="margin-top: 8px;">
           <div class="col"></div>
+          <div class="img-center">
           <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" class="img-center"></div>
+          </div>
           <div class="col"></div>
         </div>
         <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
