--- a/newtest.html
+++ b/newtest.html
@@ -74,5 +74,14 @@ body {
         <a href="https://www.x.com/DCGISJoe" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\x.svg"></a>
         <!-- ... Repeat for other images ... -->
     </div>
+    <div class="row" align="center" style="margin-top: 8px;">
+        <div class="col"></div></div>
+        <div class="col"style="margin-top: 8px;">
+            <h2>GIS Manager</h2>
+            <h2>Dakota County Information Technology</h2>
+            <h2>Office of GIS</h2> 
+        </div>
+        <div class="col"style="margin-top: 8px;"></div>  
+    </div>
 </body>
 </html>
