gap and osm name

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center; /* Vertically center images */
-    gap: 4px; /* Adjust spacing between images */
+    gap: 20px; /* Adjust spacing between images */
 }
 
 .image-row img {
@@ -70,7 +70,7 @@ body {
         <a href="https://www.github.com/DCJoeS" aria-label="Visit Joe's Github"><img src="images\icons\github.svg"></a>
         <a href="https://www.instagram.com/jsapletal" aria-label="Visit Joe's Instagram"><img src="images\icons\instagram.svg"></a>
         <a href="https://www.linkedin.com/in/joesapletal/" aria-label="Visit Joe's LinkedIn Profile"><img src="images\icons\linkedin.svg"></a>
-        <a href="https://www.openstreetmap.org/user/DCJoeS" aria-label="Visit Joe's OSM Profile"><img src="images\icons\osm-white.svg"></a>
+        <a href="https://www.openstreetmap.org/user/DCJoeS" aria-label="Visit Joe's OSM Profile"><img src="images\icons\osm_white.svg"></a>
         <a href="https://www.x.com/DCGISJoe" aria-label="Visit Joe on X"><img src="images\icons\x.svg"></a>
         <!-- ... Repeat for other images ... -->
     </div>
