--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {
 
     <div class="image-row">
         <!-- Add your images here -->
-        <a href="https://dakotacounty.maps.arcgis.com" aria-label="Email me"><img src="images\icons\agol.svg" alt="Email"></a>
+        <a href="https://dakotacounty.maps.arcgis.com" aria-label="Email me"><img src="images\icons\email.svg" alt="Email"></a>
         <a href="https://dakotacounty.maps.arcgis.com" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\agol.svg" alt="Dakota County ArcGIS Online"></a>
         <a href="https://www.co.dakota.mn.us/" aria-label="Visit Dakota County"><img src="images\icons\generic-website.svg"></a>
         <a href="https://www.github.com/DCJoeS" aria-label="Visit Joe's Github"><img src="images\icons\github.svg"></a>
