commented wrong background

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <style>
 
 body {
-    /* background-image: url(images\backgrounds\MiesvilleRavineHillshade.png);*/
-    background: rgb(31,26,53);
+    background-image: url(images\backgrounds\MiesvilleRavineHillshade.png);
+    /* background: rgb(31,26,53);*/
   }
   h1 {
     color:white;
