forgot the quotes on the image url

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
 
 body {
-    background-image: url(images\backgrounds\MiesvilleRavineHillshade.png);
+    background-image: url("images\backgrounds\MiesvilleRavineHillshade.png");
     /* background: rgb(31,26,53);*/
   }
   h1 {
