--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>Joe Sapletal, GISP</title>
     <style>
 
-body {
-    background-image: url("images\backgrounds\MiesvilleRavineHillshade.png");
+  body {
+    background-image: url("images\\backgrounds\\MiesvilleRavineHillshade.png");
     /* background: rgb(31,26,53);*/
   }
   h1 {
