--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
   body {
     background-image: url("images\\backgrounds\\MiesvilleRavineHillshade.png");
+    filter: brightness(80%);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: rgba(0,0,0,0.7);
+    background-blend-mode: darken;
     /* background: rgb(31,26,53);*/
   }
   h1 {
