--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
               </div>
           </div>
           </div>
-      </div>
+      </div></div>
       <div class="col-sm-1"style="margin-top: 8px;"></div>
-  </div>
+    </div>
 <!-- card-->
 </body>
 </html>
