--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
         <!-- ... Repeat for other images ... -->
     </div>
     <div class="row" align="center" style="margin-top: 8px;">
-        <div class="col"></div></div>
-        <div class="col"style="margin-top: 8px;">
+        <div class="col-sm-1"></div></div>
+        <div class="col-sm-10"style="margin-top: 8px;">
             <h2>GIS Manager</h2>
             <h2>Dakota County Information Technology</h2>
             <h2>Office of GIS</h2> 
         </div>
-        <div class="col"style="margin-top: 8px;"></div>  
+        <div class="col-sm-1"style="margin-top: 8px;"></div>  
     </div>
 <!-- card-->
     <div class="row" align="center" style="margin-top: 8px;">
