--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <!-- ... Repeat for other images ... -->
     </div>
     <div class="row" align="center" style="margin-top: 8px;">
-        <div class="col-sm-1"></div></div>
+        <div class="col-sm-1"></div>
         <div class="col-sm-10"style="margin-top: 8px;">
             <h2>GIS Manager</h2>
             <h2>Dakota County Information Technology</h2>
