--- a/index.html
+++ b/index.html
@@ -77,14 +77,15 @@
         <a href="https://www.x.com/DCGISJoe" aria-label="Visit Joe on X"><img src="images\icons\x.svg"></a>
         <!-- ... Repeat for other images ... -->
     </div>
+
     <div class="row" align="center" style="margin-top: 8px;">
-        <div class="col-sm-1"></div>
-        <div class="col-sm-10"style="margin-top: 8px;">
+        <div class="col-xs-1"></div>
+        <div class="col-xs-10"style="margin-top: 8px;">
             <h2>GIS Manager</h2>
             <h2>Dakota County Information Technology</h2>
             <h2>Office of GIS</h2> 
         </div>
-        <div class="col-sm-1"style="margin-top: 8px;"></div>  
+        <div class="col-xs-1"style="margin-top: 8px;"></div>  
     </div>
 <!-- card-->
     <div class="row" align="center" style="margin-top: 8px;">
