--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </style>
     </head>
 <body>
-    <div class="container-fluid mt-3">
+    <div class="container-fluid">
         <div class="row"style="margin-top: 32px;">
           <div class="col"></div>
           <div class="img-center">
@@ -79,13 +79,13 @@
     </div>
 
     <div class="row" align="center" style="margin-top: 8px;">
-        <div class="col-xs-1"></div>
-        <div class="col-xs-10"style="margin-top: 8px;">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10"style="margin-top: 8px;">
             <h2>GIS Manager</h2>
             <h2>Dakota County Information Technology</h2>
             <h2>Office of GIS</h2> 
         </div>
-        <div class="col-xs-1"style="margin-top: 8px;"></div>  
+        <div class="col-sm-1"style="margin-top: 8px;"></div>  
     </div>
 <!-- card-->
     <div class="row" align="center" style="margin-top: 8px;">
