added sm to container

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 <body>
     <div class="container-fluid">
         <div class="row"style="margin-top: 32px;">
-          <div class="col"></div>
+          <div class="col-sm-1"></div>
           <div class="img-center">
-          <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" class="img-center"></div>
+          <div class="col-sm-10"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" class="img-center"></div>
           </div>
-          <div class="col"></div>
+          <div class="col-sm-1"></div>
         </div>
         <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
         <h2>joe.sapletal@co.dakota.mn.us</h2>
