--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <style>
 
   body {
-    background-image: url("images\\backgrounds\\MiesvilleRavineHillshade.png");
+    /* background-image: url("images\\backgrounds\\MiesvilleRavineHillshade.png");*/
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgba(0,0,0,0.6);
     background-blend-mode: darken;
-    /* background: rgb(31,26,53);*/
+    background: rgb(31,26,53);
   }
   h1 {
     color:white;
@@ -53,13 +53,13 @@
     </style>
     </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid mt-3">
         <div class="row"style="margin-top: 32px;">
-          <div class="col-sm-1"></div>
+          <div class="col"></div>
           <div class="img-center">
-          <div class="col-sm-10"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" class="img-center"></div>
+          <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" class="img-center"></div>
           </div>
-          <div class="col-sm-1"></div>
+          <div class="col"></div>
         </div>
         <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
         <h2>joe.sapletal@co.dakota.mn.us</h2>
