test another background image

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
   body {
     /* background-image: url("images\\backgrounds\\MiesvilleRavineHillshade.png");*/
+    background-image: url("images\\backgrounds\\background_charihawkins.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgba(0,0,0,0.6);
     background-blend-mode: darken;
-    background: rgb(31,26,53);
+    /* background: rgb(31,26,53);*/
   }
   h1 {
     color:white;
