--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <style>
 
   body {
-    /* background-image: url("images\\backgrounds\\MiesvilleRavineHillshade.png");*/
-    background-image: url("images\\backgrounds\\background_charihawkins.png");
-    background-position: center;
+    background-image: url("images\\backgrounds\\MiesvilleRavineHillshade.png");
+    /* background-image: url("images\\backgrounds\\background_charihawkins.png");*/
+    background-position: center-top;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgba(0,0,0,0.6);
