--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     background-color: rgba(0,0,0,0.6);
     background-blend-mode: darken;
     /* background: rgb(31,26,53);*/
+    margin: 0 auto;
   }
   h1 {
     color:white;
