--- a/index.html
+++ b/index.html
@@ -118,5 +118,34 @@
       <div class="col-sm-1"style="margin-top: 8px;"></div>
     </div>
 <!-- card-->
+<!-- card-->
+<div class="row" align="center" style="margin-top: 8px;">
+  <div class="col-sm-1"style="margin-top: 8px;"></div>
+  <div class="col-sm-10"style="margin-top: 8px;">
+  <div class="card mb-3" align="center" style="max-width: 520px;">
+      <div class="row g-0">
+          <div class="col-md-4">
+              <img
+              src="https://www.arcgis.com/sharing/rest/content/items/70575fa75b1b4e0eb11715afcf897a58/info/thumbnail/thumbnail1628525994607.png"
+              alt="Byllesby Dam Lidar"
+              class="img-fluid rounded-start"
+              />
+          </div>
+      <div class="col-md-8">
+          <div class="card-body">
+              <h5 class="card-title">Minnesota Lidar</h5>
+              <p class="card-text">
+                  The Minnesota Geospatial Advisory Council's 3D Geomatics Committee's Lidar Hub.
+              </p>
+              <p class="card-text">
+                  <small class="text-muted">Posted 8/1/2024</small>
+              </p>
+          </div>
+      </div>
+      </div>
+  </div></div>
+  <div class="col-sm-1"style="margin-top: 8px;"></div>
+</div>
+<!-- card--> 
 </body>
 </html>
