hillshade card test

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="row g-0">
               <div class="col-md-4">
                   <img
-                  src="https://www.arcgis.com/sharing/rest/content/items/70575fa75b1b4e0eb11715afcf897a58/info/thumbnail/thumbnail1628525994607.png"
+                  src="images/cards/MiesvilleRavineHillshades.png"
                   alt="Byllesby Dam Lidar"
                   class="img-fluid rounded-start"
                   />
