--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="row" align="center" style="margin-top: 8px;">
       <div class="col-sm-1"style="margin-top: 8px;"></div>
       <div class="col-sm-10"style="margin-top: 8px;">
-      <div class="card mb-3" align="center" style="max-width: 520px;" border-radius="25px;">
+      <div class="card mb-3" align="center" style="max-width: 520px;">
           <div class="row g-0">
               <div class="col-md-4">
                   <img
