--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="row g-0">
               <div class="col-md-4">
                   <img
-                  src="images/cards/MiesvilleRavineHillshades.png"
+                  src="images/cards/MiesvilleRavineHillshades.webp"
                   alt="Byllesby Dam Lidar"
                   class="img-fluid rounded-start"
                   />
