adding a href for lidar hub

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
       <div class="col-sm-10"style="margin-top: 8px;">
       <div class="card mb-3" align="center" style="max-width: 520px;">
           <div class="row g-0">
-              <div class="col-md-4">
+              <div class="col-md-4"><a href="https://lidarhub-minnesota.hub.arcgis.com/" aria-label="Lidar Hub">
                   <img
                   src="images/cards/MiesvilleRavineHillshades.webp"
                   alt="Byllesby Dam Lidar"
                   class="img-fluid rounded-start"
-                  />
+                  /></a>
               </div>
           <div class="col-md-8">
               <div class="card-body">
