a href on card title

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
               </div>
           <div class="col-md-8">
               <div class="card-body">
-                  <h5 class="card-title">Minnesota Lidar</h5>
+                <a href="https://lidarhub-minnesota.hub.arcgis.com/" aria-label="Lidar Hub">
+                  <h5 class="card-title">Minnesota Lidar</h5></a>
                   <p class="card-text">
                       The Minnesota Geospatial Advisory Council's 3D Geomatics Committee's Lidar Hub.
                   </p>
