--- a/index.html
+++ b/index.html
@@ -51,7 +51,21 @@
   margin-left: auto;
   margin-right: auto;
 }
+a:link {
+  text-decoration: none;
+}
 
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
+}
     </style>
     </head>
 <body>
