--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
 }
 a:link {
   text-decoration: none;
+  color:black;
 }
 
 a:visited {
   text-decoration: none;
+  color:black;
 }
 
 a:hover {
