--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ a:active {
           <div class="col"></div>
         </div>
         <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
+        <h2>2X MN GIS/LIS Pool Team Champion (2000 & 2001)</h2>
         <h2>joe.sapletal@co.dakota.mn.us</h2>
     </div>
 
