--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <style>
 
   body {
-    /* background-image: url("images\\backgrounds\\MiesvilleRavineHillshade.png");*/
-    background-image: url("images\\backgrounds\\background_charihawkins.png");
+    background-image: url("images\\backgrounds\\MiesvilleRavineHillshade.png");
+    /* background-image: url("images\\backgrounds\\background_charihawkins.png");*/
     background-position: center-top;
     background-repeat: no-repeat;
     background-size: cover;
