--- a/backgroundtest.html
+++ b/backgroundtest.html
@@ -22,6 +22,18 @@
 </style>
 </head>
 <body>
-
+    <div class="container-fluid mt-3">
+        <div class="row"style="margin-top: 32px;">
+          <div class="col"></div>
+          <div class="img-center">
+          <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" class="img-center"></div>
+          </div>
+          <div class="col"></div>
+        </div>
+        <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
+        <h2>2X MN GIS/LIS Pool Team Champion (2000 & 2001)</h2>
+        <h2>joe.sapletal@co.dakota.mn.us</h2>
+    </div>
+    
 </body>
 </html>
