backtest3 added the rest of the style

--- a/backgroundtest.html
+++ b/backgroundtest.html
@@ -19,6 +19,55 @@
     /* background: rgb(31,26,53);*/
     margin: 0 auto;
   }
+  h1 {
+    color:white;
+    text-align: center;
+    font-family: Arial;
+    font-weight: bold;
+    font-size: 18px;
+    }
+  h2 {
+    color:white;
+    text-align: center;
+    font-family: Arial;
+    font-weight: noraml;
+    font-size: 13px;
+  }
+
+/* styles.css */
+.image-row {
+    display: flex;
+    justify-content: center;
+    align-items: center; /* Vertically center images */
+    gap: 20px; /* Adjust spacing between images */
+}
+
+.image-row img {
+    max-width: 100%; /* Ensure images don't exceed container width */
+    height: auto; /* Maintain aspect ratio */
+}
+.img-center img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+a:link {
+  text-decoration: none;
+  color:black;
+}
+
+a:visited {
+  text-decoration: none;
+  color:black;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
+}
 </style>
 </head>
 <body>
@@ -34,6 +83,6 @@
         <h2>2X MN GIS/LIS Pool Team Champion (2000 & 2001)</h2>
         <h2>joe.sapletal@co.dakota.mn.us</h2>
     </div>
-    
+
 </body>
 </html>
