bakcground test image row for links

--- a/backgroundtest.html
+++ b/backgroundtest.html
@@ -83,6 +83,17 @@ a:active {
         <h2>2X MN GIS/LIS Pool Team Champion (2000 & 2001)</h2>
         <h2>joe.sapletal@co.dakota.mn.us</h2>
     </div>
-
+    <div class="image-row">
+        <!-- Add your images here -->
+        <a href="https://dakotacounty.maps.arcgis.com" aria-label="Email me"><img src="images\icons\email.svg" alt="Email"></a>
+        <a href="https://dakotacounty.maps.arcgis.com" aria-label="Visit Dakota County ArcGIS Online"><img src="images\icons\agol.svg" alt="Dakota County ArcGIS Online"></a>
+        <a href="https://www.co.dakota.mn.us/" aria-label="Visit Dakota County"><img src="images\icons\generic-website.svg"></a>
+        <a href="https://www.github.com/DCJoeS" aria-label="Visit Joe's Github"><img src="images\icons\github.svg"></a>
+        <a href="https://www.instagram.com/jsapletal" aria-label="Visit Joe's Instagram"><img src="images\icons\instagram.svg"></a>
+        <a href="https://www.linkedin.com/in/joesapletal/" aria-label="Visit Joe's LinkedIn Profile"><img src="images\icons\linkedin.svg"></a>
+        <a href="https://www.openstreetmap.org/user/DCJoeS" aria-label="Visit Joe's OSM Profile"><img src="images\icons\osm_white.svg"></a>
+        <a href="https://www.x.com/DCGISJoe" aria-label="Visit Joe on X"><img src="images\icons\x.svg"></a>
+        <!-- ... Repeat for other images ... -->
+    </div>
 </body>
 </html>
