--- a/backgroundtest.html
+++ b/backgroundtest.html
@@ -95,5 +95,14 @@ a:active {
         <a href="https://www.x.com/DCGISJoe" aria-label="Visit Joe on X"><img src="images\icons\x.svg"></a>
         <!-- ... Repeat for other images ... -->
     </div>
+    <div class="row" align="center" style="margin-top: 8px;">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10"style="margin-top: 8px;">
+            <h2>GIS Manager</h2>
+            <h2>Dakota County Information Technology</h2>
+            <h2>Office of GIS</h2> 
+        </div>
+        <div class="col-sm-1"style="margin-top: 8px;"></div>  
+    </div>
 </body>
 </html>
