--- a/backgroundtest.html
+++ b/backgroundtest.html
@@ -100,5 +100,35 @@ a:active {
         <h2>Dakota County Information Technology</h2>
         <h2>Office of GIS</h2>
     </div>
+    <!-- card-->
+    <div class="row" align="center" style="margin-top: 8px;">
+        <div class="col-sm-1"style="margin-top: 8px;"></div>
+        <div class="col-sm-10"style="margin-top: 8px;">
+        <div class="card mb-3" align="center" style="max-width: 520px;">
+            <div class="row g-0">
+                <div class="col-md-4"><a href="https://lidarhub-minnesota.hub.arcgis.com/" aria-label="Lidar Hub">
+                    <img
+                    src="images/cards/MiesvilleRavineHillshades.webp"
+                    alt="Byllesby Dam Lidar"
+                    class="img-fluid rounded-start"
+                    /></a>
+                </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                  <a href="https://lidarhub-minnesota.hub.arcgis.com/" aria-label="Lidar Hub">
+                    <h5 class="card-title">Minnesota Lidar</h5></a>
+                    <p class="card-text">
+                        The Minnesota Geospatial Advisory Council's 3D Geomatics Committee's Lidar Hub.
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">Posted 8/1/2024</small>
+                    </p>
+                </div>
+            </div>
+            </div>
+        </div></div>
+        <div class="col-sm-1"style="margin-top: 8px;"></div>
+      </div>
+  <!-- card-->
 </body>
 </html>
