--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@ a:hover {
 a:active {
   text-decoration: underline;
 }
+.row{
+     margin-right:0!important;
+ }
     </style>
     </head>
 <body>
