--- a/index_old20240823.html
+++ b/index_old20240823.html
@@ -71,8 +71,8 @@ a:active {
 .row{
      margin-right:0!important;
  }
-</style>
-</head>
+    </style>
+    </head>
 <body>
     <div class="container-fluid mt-3">
         <div class="row"style="margin-top: 32px;">
@@ -86,6 +86,7 @@ a:active {
         <h2>2X MN GIS/LIS Pool Team Champion (2000 & 2001)</h2>
         <h2>joe.sapletal@co.dakota.mn.us</h2>
     </div>
+
     <div class="image-row">
         <!-- Add your images here -->
         <a href="https://dakotacounty.maps.arcgis.com" aria-label="Email me"><img src="images\icons\email.svg" alt="Email"></a>
@@ -98,71 +99,75 @@ a:active {
         <a href="https://www.x.com/DCGISJoe" aria-label="Visit Joe on X"><img src="images\icons\x.svg"></a>
         <!-- ... Repeat for other images ... -->
     </div>
-    <div class="container-fluid mt-3">
-        <h2 style="margin-top: 8px;">GIS Manager</h2>
-        <h2>Dakota County Information Technology</h2>
-        <h2>Office of GIS</h2>
-    </div>
-    <!-- card-->
-    <div class="row" align="center" style="margin-top: 8px;">
-        <div class="col-sm-1"style="margin-top: 8px;"></div>
-        <div class="col-sm-10"style="margin-top: 8px;">
-        <div class="card mb-3" align="center" style="max-width: 520px;">
-            <div class="row g-0">
-                <div class="col-md-4"><a href="https://lidarhub-minnesota.hub.arcgis.com/" aria-label="Lidar Hub">
-                    <img
-                    src="images/cards/MiesvilleRavineHillshades.webp"
-                    alt="Byllesby Dam Lidar"
-                    class="img-fluid rounded-start"
-                    /></a>
-                </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                  <a href="https://lidarhub-minnesota.hub.arcgis.com/" aria-label="Lidar Hub">
-                    <h5 class="card-title">Minnesota Lidar</h5></a>
-                    <p class="card-text">
-                        The Minnesota Geospatial Advisory Council's 3D Geomatics Committee's Lidar Hub.
-                    </p>
-                    <p class="card-text">
-                        <small class="text-muted">Posted 8/1/2024</small>
-                    </p>
-                </div>
-            </div>
-            </div>
-        </div></div>
-        <div class="col-sm-1"style="margin-top: 8px;"></div>
-      </div>
-  <!-- card-->
-   <!-- card-->
-<div class="row" align="center" style="margin-top: 8px;">
-    <div class="col-sm-1"style="margin-top: 8px;"></div>
-    <div class="col-sm-10"style="margin-top: 8px;">
-    <div class="card mb-3" align="center" style="max-width: 520px;">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img
-                src="images/cards/MapCatalog.webp"
-                alt="Dakota County Map Catalog"
-                class="img-fluid rounded-start"
-                />
-            </div>
-        <div class="col-md-8">
-            <div class="card-body">
-              <a href="https://maps.co.dakota.mn.us/" aria-label="Map Catalog">
-                <h5 class="card-title">Map Catalog</h5></a>
-                <p class="card-text">
-                    The Dakota County Map Catalog.
-                </p>
-                <p class="card-text">
-                    <small class="text-muted">Posted 8/11/2024</small>
-                </p>
-            </div>
-        </div>
-        </div>
-    </div></div>
-    <div class="col-sm-1"style="margin-top: 8px;"></div>
-  </div>
-  <!-- card--> 
 
+    <div class="row" align="center" style="margin-top: 8px;">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10"style="margin-top: 8px;">
+            <h2>GIS Manager</h2>
+            <h2>Dakota County Information Technology</h2>
+            <h2>Office of GIS</h2> 
+        </div>
+        <div class="col-sm-1"style="margin-top: 8px;"></div>  
+    </div>
+<!-- card-->
+    <div class="row" align="center" style="margin-top: 8px;">
+      <div class="col-sm-1"style="margin-top: 8px;"></div>
+      <div class="col-sm-10"style="margin-top: 8px;">
+      <div class="card mb-3" align="center" style="max-width: 520px;">
+          <div class="row g-0">
+              <div class="col-md-4"><a href="https://lidarhub-minnesota.hub.arcgis.com/" aria-label="Lidar Hub">
+                  <img
+                  src="images/cards/MiesvilleRavineHillshades.webp"
+                  alt="Byllesby Dam Lidar"
+                  class="img-fluid rounded-start"
+                  /></a>
+              </div>
+          <div class="col-md-8">
+              <div class="card-body">
+                <a href="https://lidarhub-minnesota.hub.arcgis.com/" aria-label="Lidar Hub">
+                  <h5 class="card-title">Minnesota Lidar</h5></a>
+                  <p class="card-text">
+                      The Minnesota Geospatial Advisory Council's 3D Geomatics Committee's Lidar Hub.
+                  </p>
+                  <p class="card-text">
+                      <small class="text-muted">Posted 8/1/2024</small>
+                  </p>
+              </div>
+          </div>
+          </div>
+      </div></div>
+      <div class="col-sm-1"style="margin-top: 8px;"></div>
+    </div>
+<!-- card-->
+<!-- card-->
+<div class="row" align="center" style="margin-top: 8px;">
+  <div class="col-sm-1"style="margin-top: 8px;"></div>
+  <div class="col-sm-10"style="margin-top: 8px;">
+  <div class="card mb-3" align="center" style="max-width: 520px;">
+      <div class="row g-0">
+          <div class="col-md-4">
+              <img
+              src="images/cards/MapCatalog.webp"
+              alt="Dakota County Map Catalog"
+              class="img-fluid rounded-start"
+              />
+          </div>
+      <div class="col-md-8">
+          <div class="card-body">
+            <a href="https://maps.co.dakota.mn.us/" aria-label="Map Catalog">
+              <h5 class="card-title">Map Catalog</h5></a>
+              <p class="card-text">
+                  The Dakota County Map Catalog.
+              </p>
+              <p class="card-text">
+                  <small class="text-muted">Posted 8/11/2024</small>
+              </p>
+          </div>
+      </div>
+      </div>
+  </div></div>
+  <div class="col-sm-1"style="margin-top: 8px;"></div>
+</div>
+<!-- card--> 
 </body>
 </html>
