--- a/indexloadtest.html
+++ b/indexloadtest.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <style> .loader {
     position: fixed;
-    background-color: #FFF;
+    background-color: rgb(31,26,53) ;
     opacity: 1;
     height: 100%;
     width: 100%;
@@ -13,6 +13,7 @@
   </style>
   <div class="loader">
     Your Content For Load Screen
+    <img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" class="img-center">
   </div>
 <head>
     <meta charset="UTF-8">
