--- a/indexloadtest.html
+++ b/indexloadtest.html
@@ -12,8 +12,18 @@
   }
   </style>
   <div class="loader">
-    Your Content For Load Screen
-    <img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" class="img-center">
+    <div class="container-fluid mt-3">
+      <div class="row"style="margin-top: 32px;">
+        <div class="col"></div>
+        <div class="img-center">
+        <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80" class="img-center"></div>
+        </div>
+        <div class="col"></div>
+      </div>
+      <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
+      <h2>2X MN GIS/LIS Pool Team Champion (2000 & 2001)</h2>
+      <h2>joe.sapletal@co.dakota.mn.us</h2>
+  </div>
   </div>
 <head>
     <meta charset="UTF-8">
@@ -182,8 +192,8 @@ a:active {
 </body>
 <style>
   .loader {
-      -webkit-animation: load-out 10s;
-      animation: load-out 10s;
+      -webkit-animation: load-out 6s;
+      animation: load-out 6s;
       -webkit-animation-fill-mode: forwards;
       animation-fill-mode: forwards;
   }
