test new background

--- a/indexloadtest.html
+++ b/indexloadtest.html
@@ -34,7 +34,8 @@
     <style>
 
   body {
-    background-image: url("images\\backgrounds\\MiesvilleRavineHillshade.png");
+    background-image: url("images\\backgrounds\\TroutBrook_cover.webp");
+    /* background-image: url("images\\backgrounds\\MiesvilleRavineHillshade.png");*/
     /* background-image: url("images\\backgrounds\\background_charihawkins.png");*/
     background-position: center-top;
     background-repeat: no-repeat;
