--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ a:active {
         <div class="col-sm-1"style="margin-top: 8px;"></div>
       </div>
   <!-- card-->
-   <!-- card-->
+  <!-- card-->
 <div class="row" align="center" style="margin-top: 8px;">
     <div class="col-sm-1"style="margin-top: 8px;"></div>
     <div class="col-sm-10"style="margin-top: 8px;">
@@ -187,6 +187,36 @@ a:active {
     <div class="col-sm-1"style="margin-top: 8px;"></div>
   </div>
   <!-- card--> 
+    <!-- card-->
+<div class="row" align="center" style="margin-top: 8px;">
+  <div class="col-sm-1"style="margin-top: 8px;"></div>
+  <div class="col-sm-10"style="margin-top: 8px;">
+  <div class="card mb-3" align="center" style="max-width: 520px;">
+      <div class="row g-0">
+          <div class="col-md-4">
+              <img
+              src="images/cards/TroutBrook_card.webp"
+              alt="Terrain Contours"
+              class="img-fluid rounded-start"
+              />
+          </div>
+      <div class="col-md-8">
+          <div class="card-body">
+            <a href="https://youtu.be/RTLBgd8MmrY?si=QcNQ-gVosuDxX5w3" aria-label="Re-creating Trippy AI-Generated Terrain Contours">
+              <h5 class="card-title">Re-creating Trippy AI-Generated Terrain Contours</h5></a>
+              <p class="card-text">
+                  My current background was created from this video by John Nelson.  
+              </p>
+              <p class="card-text">
+                  <small class="text-muted">Posted 9/9/2024</small>
+              </p>
+          </div>
+      </div>
+      </div>
+  </div></div>
+  <div class="col-sm-1"style="margin-top: 8px;"></div>
+</div>
+<!-- card-->
 
 </body>
 <style>
