js css update for cdn

--- a/nearmp/example.html
+++ b/nearmp/example.html
@@ -10,8 +10,8 @@
       OpenLayers cdn distributable from:
       https://openlayers.org/en/latest/doc/quickstart.html
     -->
-    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/build/ol.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css" type="text/css">
+    <script src="https://github.com/openlayers/openlayers.github.io/tree/master/en/v6.1.1/build/ol.js"></script>
+    <link rel="stylesheet" href="https://github.com/openlayers/openlayers.github.io/tree/master/en/v6.1.1/css/ol.css" type="text/css">
   </head>
 
   <body>
