--- a/nearmp/esri.html
+++ b/nearmp/esri.html
@@ -51,9 +51,9 @@
         // User Input Parameters
         ////////////////////
         const api_key = "NzU2YzM2NWQtMWQwOC00OWU3LWJjZDctYjRkNTg2MzllODZh"  // "NEARMAP_API_KEY_GOES_HERE"
-        const direction = 'Vert'; // Options: 'Vert', 'North', // Note: awaiting fix from esri to support E, W, S
+        const direction = 'North'; // Options: 'Vert', 'North', // Note: awaiting fix from esri to support E, W, S
         const view_type = "Scene" // Select between 3d "Scene" or 2d "Map" viewers
-        const origin = [-97.75,30.269135];  // [Lat, Lon] for Location: ex: Austin, TX
+        const origin = [-93.20938326607553,44.73313486404156];  // [Lat, Lon] for Location: ex: Austin, TX
         const origin_zoom = 17;  // Starting Zoom level for the Web Map
         let nearmap_min_zoom = 17;  // Nearmap Imagery Lowest resolution zoom level the user can view
         const nearmap_max_zoom = 24;  // Nearmap Imagery Highest resolution zoom level the user can view
