--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -57,7 +57,7 @@
       }
     </style>
   </head>
-
+  <link rel="icon" href="https://www.co.dakota.mn.us/siteassets/DCFavIcon.ico">
   <body>
     <div id="map"></div>
     <div class="heading-btn" >
