--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -12,8 +12,8 @@
       OpenLayers cdn distributable from:
       https://openlayers.org/en/latest/doc/quickstart.html
     -->
-    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.13.0/build/ol.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.13.0/css/ol.css" type="text/css">
+    <script src="https://github.com/openlayers/openlayers.github.io/blob/master/en/v6.15.1/build/ol.js"></script>
+    <link rel="stylesheet" href="https://github.com/openlayers/openlayers.github.io/blob/master/en/v6.15.1/css/ol.css" type="text/css">
 
     <!-- map controls styling -->
     <style>
