pollyfill path update

--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- polyfills for old browsers -->
-    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,Promise,fetch,Array.prototype.filter,Array.prototype.some,Array.prototype.find,Array.prototype.findIndex,Array.prototype.map"></script>
+    <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,Promise,fetch,Array.prototype.filter,Array.prototype.some,Array.prototype.find,Array.prototype.findIndex,Array.prototype.map"></script>
 
     <!--
       OpenLayers cdn distributable from:
