--- a/ObliqueViewer/index.html
+++ b/ObliqueViewer/index.html
@@ -1,95 +1,85 @@
 <!DOCTYPE html>
-<html style="width: 100%; height: 100%;">
-  <head>
-    <title>Oblique Air Photo Viewer</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no">
+  <title>Web tiled</title>
+  <link rel="stylesheet" href="https://js.arcgis.com/3.39/dijit/themes/nihilo/nihilo.css">
+  <link rel="stylesheet" href="https://js.arcgis.com/3.39/esri/css/esri.css">
+  <style>
+    html, body, #map {
+      height: 100%; width: 100%;
+      margin: 0; padding: 0;
+    }
+    body{
+      background-color: #fff; overflow:hidden;
+      font-family: sans-serif;
+    }
+    #header {
+      padding: 4px 15px 4px 0;
+      background-color: #F2F2EC;
+      color: #575757;
+      font-size: 16pt;
+      text-align: right;
+      font-weight: bold;
+      height:30px;
+    }
 
-    <!-- polyfills for old browsers -->
-    <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?version=4.8.0&features=requestAnimationFrame,Element.prototype.classList,Promise,fetch,Array.prototype.filter,Array.prototype.some,Array.prototype.find,Array.prototype.findIndex,Array.prototype.map"></script>
+  </style>
 
-    <!--
-      OpenLayers cdn distributable from:
-      https://openlayers.org/en/latest/doc/quickstart.html
-    -->
-    <script src="https://github.com/openlayers/openlayers.github.io/blob/master/en/v6.15.1/build/ol.js"></script>
-    <link rel="stylesheet" href="https://github.com/openlayers/openlayers.github.io/blob/master/en/v6.15.1/css/ol.css" type="text/css">
+  <script src="https://js.arcgis.com/3.28/"></script>
+  <script>
 
-    <!-- map controls styling -->
-    <style>
-      #map {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-      }
+    require(["esri/map", "esri/layers/WebTiledLayer", "dojo/parser"],
+            function(Map, WebTiledLayer)
+            {
 
-      .heading-btn {
-        position: absolute;
-        bottom: 100px;
-        justify-content: space-around;
-      }
+      //////////////////////////
+      // User Input Parameters
+      ////////////////////////
 
-      .heading-btn .center {
-        display: flex;
-        justify-content: center;
-      }
-      .heading-btn button {
-        margin: 10px;
-      }
+      const api_key = "NzU2YzM2NWQtMWQwOC00OWU3LWJjZDctYjRkNTg2MzllODZh";  // "NEARMAP_API_KEY_GOES_HERE"
+      const origin_zoom = 17;  // Starting Zoom level for the Web Map
+      const origin = [-97.742,30.265]; // [Lat, Lon] for Location: ex: Austin, TX
+      const min_zoom = 17;  // Lowest resolution zoom level the user can view
+      const max_zoom = 24;  // Highest resolution zoom level the user can view
 
-      .survey-picker {
-        position: absolute;
-        bottom: 10px;
-        display: flex;
-        background: #e9e9e9;
-        justify-content: space-around;
-        padding: 5px;
-      }
+      ///////////
+      // Script
+      /////////
 
-      .survey-picker > div {
-        margin-right: 20px;
-      }
+      map = new Map("map", {
+        center: origin,
+        zoom: origin_zoom-1,
+        minZoom: min_zoom-1,
+        maxZoom: max_zoom-1,
+        basemap: "topo-vector"
+      });
 
-      .survey-picker select{
-        display: block;
-      }
-    </style>
-  </head>
-  <link rel="icon" href="https://www.co.dakota.mn.us/siteassets/DCFavIcon.ico">
-  <body>
-    <div id="map"></div>
-    <div class="heading-btn" >
-      <div class="center"><button id="northElementId" value="North">North</button></div>
-      <div>
-        <button id="westElementId" value="West">West</button>
-        <button id="vertElementId" value="Vert">Vertical</button>
-        <button id="eastElementId" value="East">East</button>
-      </div>
-      <div class="center"><button id="southElementId" value="South">South</button></div>
-    </div>
-    <div class="survey-picker">
-      <div>
-        <span>Available surveys</span>
-        <select></select>
-      </div>
-      <div >
-        <span>Selected</span>
-        <div id="selectedSurveyElementId"></div>
-      </div>
-      <div >
-        <span>Displayed</span>
-        <div id="displayedSurveyElementId"></div>
-      </div>
-    </div>
+      // TODO: Assess zoom levels https://docs.nearmap.com/pages/viewpage.action?pageId=11206698
+      const cycleMap = new WebTiledLayer(`https://api.nearmap.com/tiles/v3/Vert/{level}/{col}/{row}.img?apikey=${api_key}`, {
+        "copyright": 'Maps © <a href="https://nearmap.com">Nearmap</a>',
+        displayLevels: Array.from(Array(max_zoom+1).keys()), // Nearmap Tile Allowed Zoom Levels
+      });
+      map.addLayer(cycleMap);
+    });
+  </script>
+</head>
+<body class="nihilo">
+<div id="mainWindow"
+     data-dojo-type="dijit/layout/BorderContainer"
+     data-dojo-props="design:'headline',gutters:false"
+     style="width: 100%; height: 100%; margin: 0;">
+  <div id="header"
+       data-dojo-type="dijit/layout/ContentPane"
+       data-dojo-props="region:'top'">
+    Nearmap Tile API Example
 
-    <!-- Nearmap js files - import order is important -->
-    <script src="config.js"></script>
-    <script src="url.js"></script>
-    <script src="math.js"></script>
-    <script src="projections.js"></script>
-    <script src="loader.js"></script>
-    <script src="index.js"></script>
-  </body>
+  </div>
+  <div id="map" class="shadow"
+       data-dojo-type="dijit/layout/ContentPane"
+       data-dojo-props="region:'center'">
+  </div>
+</div>
+</body>
 </html>
